package br.com.fiap.bank.plataformacredito.domain.entidades;

public enum StatusProposta {
    PENDENTE,
    APROVADA,
    REJEITADA,
    CANCELADA
}
