package br.com.fiap.bank.plataformacredito.domain.valueobjects;

public final class CNPJ extends Documento {

    public CNPJ(String numero, Integer digitoVerificador) {
        super(numero, digitoVerificador);
    }

    @Override
    protected Boolean validar() {
        return true;
    }

    @Override
    public String toString() {
        return String.format("%d-%d", numero, digitoVerificador);
    }

}
