classDiagram

    direction TD

    class Validavel {
        <<interface>>
        +validar() Boolean
    }

    class Analisavel {
        <<interface>>
        +aprovar() void
        +rejeitar(String motivo) void
        +cancelar() void
    }

    class SujeitoCredito {
        <<interface>>
        +atribuirAvaliacaoRisco(Integer scoreCredito, String nivelEndividamentoSCR, Boolean possuiHistoricoInadimplencia) void
    }

    class BaseEntity {
        <<abstract>>
        #UUID id
        #LocalDate dataCriacao
        #LocalDate dataAtualizacao
        +BaseEntity()
        +getId() UUID
        +getDataCriacao() LocalDate
        +getDataAtualizacao() LocalDate
        +setDataAtualizacao(LocalDate dataAtualizacao) void
    }

    class Documento {
        <<abstract>>
        #String numero
        #Integer digitoVerificador
        +Documento(String numero, Integer digitoVerificador)
        +getNumero() String
        +getDigitoVerificador() Integer
        +validar() Boolean
    }

    class Cliente {
        <<abstract>>
        #Conta conta
        #Documento documento
        #AvaliacaoRisco avaliacaoRisco
        +Cliente(Documento documento, Conta conta)
        +getConta() Conta
        +getAvaliacaoRisco() AvaliacaoRisco
        +getDocumento() Documento
        +atribuirAvaliacaoRisco(Integer scoreCredito, String nivelEndividamentoSCR, Boolean possuiHistoricoInadimplencia) void
    }

    class ClientePessoaFisica {
        -String nome
        -LocalDate dataNascimento
        +ClientePessoaFisica(String nome, LocalDate dataNascimento, Documento documento, Conta conta)
        +getAvaliacaoRisco() AvaliacaoRisco
        +getNome() String
        +getDataNascimento() LocalDate
    }

    class ClientePessoaJuridica {
        -String nomeFantasia
        -String razaoSocial
        -LocalDate dataConstituicao
        +ClientePessoaJuridica(String nomeFantasia, String razaoSocial, LocalDate dataConstituicao, Documento documento, Conta conta)
        +getNomeFantasia() String
        +getRazaoSocial() String
        +getDataConstituicao() LocalDate
    }

    class Conta {
        -String agencia
        -String numero
        -String digito
        -LocalDate dataAbertura
        -BigDecimal saldo
        +Conta(String agencia, String numero, String digito, LocalDate dataAbertura)
        +getAgencia() String
        +getNumero() String
        +getDigito() String
        +getDataAbertura() LocalDate
        +getSaldo() BigDecimal
    }

    class AvaliacaoRisco {
        -Integer scoreCredito
        -String nivelEndividamentoSCR
        -Boolean possuiHistoricoInadimplencia
        +AvaliacaoRisco(Integer scoreCredito, String nivelEndividamentoSCR, Boolean possuiHistoricoInadimplencia)
        +getNivelEndividamentoSCR() String
        +getScoreCredito() Integer
        +getPossuiHistoricoInadimplencia() Boolean
    }

    class CPF {
        +CPF(String numero, Integer digitoVerificador)
        +validar() Boolean
        +toString() String
    }

    class CNPJ {
        +CNPJ(String numero, Integer digitoVerificador)
        +validar() Boolean
        +toString() String
    }

    class Proposta {
        -Integer DIAS_VALIDADE_PADRAO_PROPOSTA$
        -Cliente cliente
        -String codigo
        -StatusProposta status
        -BigDecimal valorSolicitado
        -Integer quantidadeParcelas
        -LocalDate dataValidade
        -String motivoRejeicao
        +Proposta(String codigo, BigDecimal valorSolicitado, Integer quantidadeParcelas, Cliente cliente)
        +getCodigo() String
        +getStatus() StatusProposta
        +getValorSolicitado() BigDecimal
        +getQuantidadeParcelas() Integer
        +getDataValidade() LocalDate
        +getMotivoRejeicao() String
        +getCliente() Cliente
        +aprovar() void
        +rejeitar(String motivo) void
        +cancelar() void
    }

    class StatusProposta {
        <<enumeration>>
        PENDENTE
        APROVADA
        REJEITADA
        CANCELADA
    }

    %% class ClienteFactory {
    %%     +criarClientePessoaFisica(String nome, String dataNascimento, String cpf, Conta conta)$ Cliente
    %%     +criarClientePessoaJuridica(String nomeFantasia, String razaoSocial, String dataConstituicao, String cnpj, Conta conta)$ Cliente
    %% }

    %% class PlataformaCreditoApplication {
    %%     -PlataformaCreditoApplication instancia$
    %%     +novaInstancia()$ PlataformaCreditoApplication
    %%     +criarProposta(String codigo, String nome, String dataNascimento, String cpf, String valorSolicitado, String quantidadeParcelas) void
    %% }

    %% class PlataformaCreditoPresentation {
    %%     -PlataformaCreditoPresentation instancia$
    %%     -PlataformaCreditoApplication plataformaCreditoApplication
    %%     +novaInstancia()$ PlataformaCreditoPresentation
    %%     +iniciar() void
    %%     -criarProposta(Scanner input) void
    %% }

    %% Relacionamentos
    Validavel <|.. Documento : Implementa
    Analisavel <|.. Proposta : Implementa
    SujeitoCredito <|.. Cliente : Implementa

    BaseEntity <|-- Cliente
    BaseEntity <|-- Conta
    BaseEntity <|-- Proposta

    Documento <|-- CPF
    Documento <|-- CNPJ

    Cliente <|-- ClientePessoaFisica
    Cliente <|-- ClientePessoaJuridica
    
    Cliente "1" *-- "1" Conta : Possui
    Cliente "1" *-- "1" Documento : Possui
    Cliente "1" *-- "0..1" AvaliacaoRisco : Possui
    
    Proposta "*" o-- "1" Cliente : Associada a
    Proposta "1" *-- "1" StatusProposta : Possui
    
    %% PlataformaCreditoPresentation --> PlataformaCreditoApplication : Usa
    %% PlataformaCreditoApplication ..> ClienteFactory : Usa
    %% ClienteFactory ..> ClientePessoaFisica : Cria
    %% ClienteFactory ..> ClientePessoaJuridica : Cria
